--- a/data-jpa-books-project/pom.xml
+++ b/data-jpa-books-project/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.global.book</groupId>
 	<artifactId>data-jpa-books-project</artifactId>
@@ -30,6 +30,8 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<lombok.version>1.18.22</lombok.version>
+		 <mapstruct-lombok.version>0.2.0</mapstruct-lombok.version>
 	</properties>
 
 	<dependencies>
@@ -64,7 +66,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.34</version>
+			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
 
