--- a/data-jpa-books-project/pom.xml
+++ b/data-jpa-books-project/pom.xml
@@ -31,7 +31,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<lombok.version>1.18.22</lombok.version>
-		 <mapstruct-lombok.version>0.2.0</mapstruct-lombok.version>
+		<mapstruct-lombok.version>0.2.0</mapstruct-lombok.version>
+		<springdoc.version>1.6.4</springdoc.version>
 	</properties>
 
 	<dependencies>
@@ -66,7 +67,6 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
 
@@ -86,6 +86,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-ui</artifactId>
+		    <version>${springdoc.version}</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
