--- a/data-jpa-books-project/src/main/resources/application.properties
+++ b/data-jpa-books-project/src/main/resources/application.properties
@@ -52,3 +52,20 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
+# to use custom path
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.operationsSorter=method
+# Disabling the /v3/api-docs endpoint
+#springdoc.api-docs.enabled=false
+# Disabling the swagger-ui
+#springdoc.swagger-ui.enabled=false
+# Packages to include
+#springdoc.packagesToScan=com.package1, com.package2
+# Paths to include
+#springdoc.pathsToMatch=/v1, /api/balance/**
+
+
+application-description = Book APIs
+application-version = 1.3
